# norse

./: .codacy.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CMakeLists.txt  Dockerfile  GOVERNANCE.md  MANIFEST.in  Pipfile  README.md  Readme.md  about.html  api.html  benchmark.py  contributing.md  default.nix  experiments.html  functional.html  genindex.html  hardware.html  index.html  installing.html  learning.html  module.html  modules.html  myelin.yml  norse.html  norse.task.html  norse.torch.benchmark.html  norse.torch.functional.html  norse.torch.html  norse.torch.models.html  norse.torch.module.html  norse.torch.module.test.html  norse.torch.utils.html  objects.inv  papers.html  (+17 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
_autosummary/: norse.benchmark.benchmark.html  norse.benchmark.html  norse.benchmark.main.html  norse.benchmark.norse_lif.html  norse.benchmark.plot.html  norse.dataset.html  norse.dataset.memory.html  norse.dataset.spiking_heidelberg.html  norse.html  norse.task.correlation_experiment.html  norse.task.html  norse.task.mnist.html  norse.task.mnist_pl.html  norse.torch.functional.adjoint.html  norse.torch.functional.adjoint.lif_adjoint.html  norse.torch.functional.adjoint.lif_mc_adjoint.html  norse.torch.functional.adjoint.lif_mc_refrac_adjoint.html  norse.torch.functional.adjoint.lif_refrac_adjoint.html  norse.torch.functional.adjoint.lsnn_adjoint.html  norse.torch.functional.adjoint.test.html  norse.torch.functional.adjoint.test.test_lif_adjoint.html  norse.torch.functional.adjoint.test.test_lif_refrac_adjoint.html  norse.torch.functional.adjoint.test.test_lsnn_adjoint.html  norse.torch.functional.coba_lif.html  norse.torch.functional.correlation_sensor.html  norse.torch.functional.decode.html  norse.torch.functional.encode.html  norse.torch.functional.filter.html  norse.torch.functional.heaviside.html  norse.torch.functional.html  norse.torch.functional.iaf.html  norse.torch.functional.izhikevich.html  norse.torch.functional.leaky_integrator.html  norse.torch.functional.leaky_integrator_box.html  norse.torch.functional.lif.html  norse.torch.functional.lif_adex.html  norse.torch.functional.lif_adex_refrac.html  norse.torch.functional.lif_box.html  norse.torch.functional.lif_correlation.html  norse.torch.functional.lif_ex.html  (+120 more)
_modules/: index.html
_sources/: experiments.rst.txt  index.md  index.rst.txt  installing.rst.txt  learning.rst.txt  module.rst.txt  modules.rst.txt  norse.task.rst.txt  norse.torch.benchmark.rst.txt  norse.torch.functional.rst  norse.torch.functional.rst.txt  norse.torch.models.rst.txt  norse.torch.module.rst.txt  norse.torch.rst  norse.torch.utils.rst  spiking.rst.txt  started.rst.txt  tasks.rst.txt  working.rst.txt
_static/: alabaster.css  documentation_options.js
auto_api/: modules.html  norse-torch-utils-plot-4.py  norse-torch-utils-plot-plot-1.py  norse-torch-utils-plot-plot-2.py  norse-torch-utils-plot-plot-3.py  norse-torch-utils-plot-plot-6.py  norse.benchmark.benchmark.html  norse.benchmark.bindsnet_lif.html  norse.benchmark.genn_lif.html  norse.benchmark.html  norse.benchmark.main.html  norse.benchmark.norse_lif.html  norse.benchmark.plot.html  norse.benchmark.pysnn_lif.html  norse.dataset.dvs_gesture.html  norse.dataset.html  norse.dataset.memory.html  norse.dataset.speech_commands.html  norse.dataset.spiking_heidelberg.html  norse.html  norse.task.cartpole.html  norse.task.cifar10.html  norse.task.correlation_experiment.html  norse.task.html  norse.task.memory.html  norse.task.mnist.html  norse.task.mnist_pl.html  norse.torch.benchmark.benchmark.html  norse.torch.benchmark.html  norse.torch.benchmark.lif.html  norse.torch.functional.adjoint.coba_lif_adjoint.html  norse.torch.functional.adjoint.html  norse.torch.functional.adjoint.lif_adjoint.html  norse.torch.functional.adjoint.lif_mc_adjoint.html  norse.torch.functional.adjoint.lif_mc_refrac_adjoint.html  norse.torch.functional.adjoint.lif_refrac_adjoint.html  norse.torch.functional.adjoint.lsnn_adjoint.html  norse.torch.functional.adjoint.test.html  norse.torch.functional.adjoint.test.test_lif_adjoint.html  norse.torch.functional.adjoint.test.test_lif_refrac_adjoint.html  (+122 more)
auto_examples/: index.html  plot_mnist.html  run_cifar.html  run_gym.html  run_mnist.html  sg_execution_times.html
benchmark/: benchmark.ipynb  run_notebook.py
checkpoints/: best_model.ckpt
docs/: .gitignore  Makefile  (+16 more)
norse/csrc/: CMakeLists.txt  cmake_install.cmake  lif.cpp  lif.h  lif_test.cpp  op.cpp  super.cpp  super.h
(+928 files in other folders)
